# Certifiy

./: DockerFile  README.md  app.py  build.sh  pyproject.toml  requirements.txt
static/: certificate.css  style.css
templates/: certificate.html  certificate_template.html  index.html
