[tool.poetry]
name = "Certify"
version = "0.1.0"
description = "Data to Certificate Generation"
authors = ["techabbayi"]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.3"

[tool.poetry.dev-dependencies]
pytest = "^7.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
